ejercicio 4 a medio hacer
Ejercicio 4 a medio hacer, falta darle una vuelta al forEach

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
             <h2 class="">Salidas</h2>
             <p class="resultado"></p>
         </article>
+        <article>
+            <h2>
+                Ejercicio 4
+            </h2>
+            <p>Empleando un prompt, preguntar una frase a un usuario 
+                y mostrarla en la página de tal forma que cada palabra 
+                de esa frase (String) aparezca en una línea.
+            </p>
+            <button class="btn2">Introducir frase</button>
+            <p class="frase"></p>
+            <p class="frase-resultado"></p>
+        </article>
     </section>
     
 
