--- a/index.html
+++ b/index.html
@@ -33,8 +33,26 @@
                 de esa frase (String) aparezca en una línea.
             </p>
             <button class="btn2">Introducir frase</button>
-            <p class="frase"></p>
+            <div class="frase">
+                
+            </div>
             <p class="frase-resultado"></p>
+        </article>
+        <article>
+            <h2>
+                Ejercicio 8
+            </h2>
+            <p>
+                Nuestro documento tiene un elemento <img> cuyo atributo src 
+                es el nombre de un archivo de imagen. 
+                Mediante expresiones regulares, mostrar el nombre de 
+                dicho archivo solo si su extensión es .jpg
+            </p>
+            <img src="" alt="">
+            <img src="" alt="">
+            <div>
+
+            </div>
         </article>
     </section>
     
