Añadidos ejercicio 5 y 6 sin acabar
Añadidos los ejercicios 5 y 6 y los primeros pasos para realizar el ejercicio 5

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h2 class="">Salidas</h2>
             <p class="resultado"></p>
         </article>
+
         <article>
             <h2>
                 Ejercicio 4
@@ -38,6 +39,26 @@
             </div>
             <p class="frase-resultado"></p>
         </article>
+
+        <article>
+            <h2>Ejercicio 5</h2>
+            <p>
+                Mostrar en la página que mes y día de la semana
+                es <a class="fecha-hora"><strong style="color: blue;">hoy</strong></a>, con letras.
+            </p>
+            <div class="mostrar-hora">
+
+            </div>
+        </article>
+
+        <article>
+            <h2>Ejercicio 6</h2>
+            <p>
+                Realizar una función recursiva que permita sumar 
+                números del 1 al 100.
+            </p>
+        </article>
+
         <article>
             <h2>
                 Ejercicio 8
@@ -58,6 +79,7 @@
 
             </div>
         </article>
+        
     </section>
     
 
